Sun Dec  1 22:14:27 2013  Zachary Scott  <e@zzak.io>

	* doc/contributors.rdoc: [DOC] Import contributors from redmine wiki
	  Many wiki pages have become outdated and spam-ridden, we will import
	  these to trunk and begin maintaining them in ruby-trunk. This will
	  also allow new contributors to easily contribute patches to update
	  these pages, where previously a redmine account with wiki access was
	  required. Another bonus is having a contributors file to show thanks
	  to all of the people who have submitted a patch to Ruby.

Sun Dec  1 18:03:26 2013  Zachary Scott  <e@zzak.io>

	* doc/maintainers.rdoc: [DOC] Current maintainers of Ruby

Sun Dec  1 17:17:36 2013  Zachary Scott  <e@zzak.io>

	* doc/contributing.rdoc: [DOC] Current branch maintainers

Sun Dec  1 17:16:36 2013  Zachary Scott  <e@zzak.io>

	* doc/contributing.rdoc: [DOC] Reporting other (ruby-lang.org) issues

Sun Dec  1 17:15:51 2013  Zachary Scott  <e@zzak.io>

	* doc/contributing.rdoc: [DOC] Current platform maintainers

Sun Dec  1 17:14:55 2013  Zachary Scott  <e@zzak.io>

	* doc/contributing.rdoc: [DOC] Reporting downstream distro issues

Sun Dec  1 14:37:20 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* hash.c (rb_hash_to_a): specify array capa.

Sun Dec  1 14:15:36 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* hash.c (rb_hash_rehash): fix to free new st_table when exception
	  is raised in do_hash(). [Bug #9187]

Sun Dec  1 11:57:59 2013  Zachary Scott  <e@zzak.io>

	* ext/openssl/lib/openssl/buffering.rb: Fix warning in copyright

Sun Dec  1 08:27:28 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master 66e5c39.  Notable changes:

	  Implement gem.deps.rb (Gemfile) .lock support

	  Fixed `gem uninstall` for a relative directory in GEM_HOME.

	* test/rubygems:  ditto.

Sun Dec  1 06:00:49 2013  Aman Gupta <ruby@tmm1.net>

	* test/ruby/test_gc.rb (test_gc_reason): Force minor GC by consuming
	  free slots to fix test.
