@@ -1,3 +1,9 @@
+Mon Dec  2 00:53:01 2013  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* hash.c (getenv): use ANSI codepage version of getenv() for miniruby
+	  on Windows.
+	  [ruby-core:58732] [Bug #9189] reported by phasis68 (Heesob Park).
+
 Sun Dec  1 22:14:27 2013  Zachary Scott  <e@zzak.io>
 
 	* doc/contributors.rdoc: [DOC] Import contributors from redmine wiki
